# optimo

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.Commercial  LICENSE.LGPLv3  README.md
.github/workflows/: macos.yml  ubuntu.yml
OptiMo/: core.cpp  core.h  core_io.cpp  core_opt.cpp  core_rbdl.cpp  curve.cpp  curve.h  graphwidget.cpp  graphwidget.h  ikhandler.cpp  ikhandler.h  item.h  joint.cpp  joint.h  jointweightdialog.cpp  jointweightdialog.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  sliderdialog.cpp  sliderdialog.h  timevaryingweightdialog.cpp  timevaryingweightdialog.h  util.cpp  util.h  variable.cpp  variable.h
resources/: scene-conductor.json  scene-fox-tail.json  scene-stick-figure.json
